--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-youtubedl-gui (1.0-1) xenial; urgency=medium
+youtubedl-gui (1.3-1focal) focal; urgency=medium
 
   * Initial release - stable version 
 
